--- a/app/src/main/res/layout/activity_login_.xml
+++ b/app/src/main/res/layout/activity_login_.xml
@@ -4,7 +4,158 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:animateLayoutChanges="true"
     android:background="@drawable/grad_bg"
     tools:context="com.example.ivan.savemoney.Login_Activity">
+
+    
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="40dp"
+        android:layout_marginLeft="40dp"
+        android:layout_centerInParent="true" >
+    
+        <ImageView
+            android:id="@+id/imgView_logo"
+            android:layout_width="match_parent"
+            android:layout_height="120dp"
+            android:adjustViewBounds="true"
+            android:scaleType="fitCenter"
+            android:src="@drawable/icons8logoahorros"/>
+        
+        <RelativeLayout
+            android:id="@+id/really1"
+            android:visibility="gone"
+            android:layout_below="@id/imgView_logo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            
+            <TextView
+                android:id="@+id/tvLogin"
+                android:fontFamily="sans-serif-medium"
+                android:text="Iniciar Sesion"
+                android:textSize="30sp"
+                android:textColor="@color/white"
+                android:layout_marginTop="20dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <LinearLayout
+                android:id="@+id/log"
+                android:orientation="vertical"
+                android:layout_below="@id/tvLogin"
+                android:layout_marginTop="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                
+                    <TextView
+                        android:text="Usuario"
+                        android:fontFamily="sans-serif-medium"
+                        android:textSize="15sp"
+                        android:textColor="@color/white"
+                        android:textAllCaps="true"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
+                    <EditText
+                        android:id="@+id/etxtUsuario"
+                        android:inputType="textEmailAddress"
+                        android:textSize="15sp"
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:layout_marginTop="5dp"
+                        android:textColor="@color/white"
+                        android:paddingLeft="15sp"
+                        android:paddingRight="15sp"
+                        android:fontFamily="sans-serif-medium"
+                        android:background="@drawable/et_bg"/>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:text="Contraseña"
+                        android:fontFamily="sans-serif-medium"
+                        android:textSize="15sp"
+                        android:textColor="@color/white"
+                        android:textAllCaps="true"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
+                    <EditText
+                        android:id="@+id/etxtCpntrasenia"
+                        android:inputType="textPassword"
+                        android:textSize="15sp"
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:layout_marginTop="5dp"
+                        android:textColor="@color/white"
+                        android:paddingLeft="15sp"
+                        android:paddingRight="15sp"
+                        android:fontFamily="sans-serif-medium"
+                        android:background="@drawable/et_bg"/>
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <Button
+                android:text="Iniciar Sesion"
+                android:textSize="16dp"
+                android:textColor="@color/white"
+                android:fontFamily="sans-serif-medium"
+                android:textAllCaps="false"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@id/log"
+                android:layout_marginTop="30dp"
+                android:paddingLeft="70dp"
+                android:paddingRight="70dp"
+                android:background="@drawable/btn_bg"/>
+
+        </RelativeLayout>
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/really2"
+        android:visibility="gone"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_alignParentBottom="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <Button
+            android:background="@color/transparent"
+            android:fontFamily="sans-serif"
+            android:text="Registrarse"
+            android:textAllCaps="true"
+            android:textColor="@color/white"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <Button
+            android:background="@color/transparent"
+            android:fontFamily="sans-serif"
+            android:text="Recuperar Contraseña"
+            android:textAllCaps="true"
+            android:textColor="@color/white"
+            android:layout_alignParentRight="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+    </RelativeLayout>
 
 </RelativeLayout>
