--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#23A7D8</color>
-    <color name="colorPrimaryDark">#23A7D8</color>
+    <color name="colorPrimary">#607D8B</color>
+    <color name="colorPrimaryDark">#4A148C</color>
     <color name="colorAccent">#FFFFFF</color>
     <color name="white">#FFFFFF</color>
     <color name="transparent">#00000000</color>
-    <color name="gradStart">#19AA8B</color>
-    <color name="gradStop">#23A7D8</color>
-
+    <color name="gradStart">#4A148C</color>
+    <color name="gradStop">#880E4F</color>
 </resources>
