Agregar Permisos de Internet y Logica de Inicio de Sesion

--- a/app/src/main/res/layout/activity_login_.xml
+++ b/app/src/main/res/layout/activity_login_.xml
@@ -110,6 +110,7 @@
             </LinearLayout>
 
             <Button
+                android:id="@+id/btnIniciarSesion"
                 android:text="Iniciar Sesion"
                 android:textSize="16dp"
                 android:textColor="@color/white"
