--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -15,10 +15,12 @@
         tools:ignore="MergeRootFrame" >
 
         <ScrollView
+            android:id="@+id/scrollViewAllPage"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <WebView
+                android:id="@+id/graficasMoneyPie"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
             </WebView>
