--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,20 +14,16 @@
         android:layout_height="match_parent"
         tools:ignore="MergeRootFrame" >
 
-        <ScrollView
-            android:id="@+id/scrollViewAllPage"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+
 
             <WebView
                 android:id="@+id/graficasMoneyPie"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
-            </WebView>
+                android:layout_height="match_parent"></WebView>
 
 
-        </ScrollView>
+
 
     </android.support.v4.widget.SwipeRefreshLayout>
 
-</RelativeLayout>
+</LinearLayout>
