--- a/app/src/main/res/layout/activity_login_.xml
+++ b/app/src/main/res/layout/activity_login_.xml
@@ -71,6 +71,7 @@
                         android:layout_height="40dp"
                         android:layout_marginTop="5dp"
                         android:textColor="@color/white"
+                        android:textCursorDrawable="@color/white"
                         android:paddingLeft="15sp"
                         android:paddingRight="15sp"
                         android:fontFamily="sans-serif-medium"
@@ -99,6 +100,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="40dp"
                         android:layout_marginTop="5dp"
+                        android:textCursorDrawable="@color/white"
                         android:textColor="@color/white"
                         android:paddingLeft="15sp"
                         android:paddingRight="15sp"
